<resources xmlns:tools="http://schemas.android.com/tools">
    <string name="app_name">侨银环保</string>

    <string name="is_newest_version">当前版本已是最新版本</string>
    <string name="update">更新</string>
    <string name="updating">更新中…</string>
    <string name="onclick_again">请勿重复点击</string>
    <string name="sure">确认</string>
    <string name="tab_main_name">消息</string>
    <string name="tab_classify_name">第二</string>
    <string name="tab_search_name">应用</string>
    <string name="tab_news_name">通讯录</string>
    <string name="tab_mine_name">我的</string>
    <string name="tab_tack_name">任务</string>
    <string name="project_manage">项目管理</string>
    <string name="operation_manage">作业管理</string>
    <string name="operation_monitor">作业监控</string>
    <string name="quality_manage">质量管理</string>

    <string name="fengrun">广东丰润环境管理服务有限公司</string>
    <string name="problem_updata">作业监察</string>
    <string name="all_txt">全部</string>
    <string name="pending_txt">待处理</string>
    <string name="processing_txt">处理中</string>
    <string name="toclosed_txt">待关闭</string>
    <string name="problem_detail_txt">问题详情</string>
    <string name="uploading">上传中…</string>
    <string name="upload_success">上传成功,是否退出当前界面!</string>
    <string name="closed_txt">已关闭</string>
    <string name="claimming">认领中…</string>
    <string name="claim_success">认领成功</string>
    <string name="submit_success">提交成功</string>
    <string name="uploaded_event">完成事件</string>
    <string name="uploaded">完成</string>
    <string name="submiting">提交中…</string>
    <string name="problem_evaluation">关闭事件</string>
    <string name="closed">关闭</string>
    <string name="closing">关闭中…</string>
    <string name="login" tools:ignore="TypographyEllipsis">登录中...</string>
    <string name="usernamePwd_noNull">账号或密码不能为空</string>
    <string name="cancel">取消</string>
    <string name="sure_exit_app">你确定要退出App吗？</string>
    <string name="locationing" tools:ignore="TypographyEllipsis">定位中…</string>
    <string name="photo_processing">图片处理中…</string>
    <string name="personal">人员(0)</string>
    <string name="vehicle">车辆(0)</string>
    <string name="problem">问题(0)</string>

    <string name="app_name_time">时间</string>
    <string name="pickerview_cancel">取消</string>
    <string name="pickerview_submit">确定</string>
    <string name="pickerview_year">年</string>
    <string name="pickerview_month">月</string>
    <string name="pickerview_day">日</string>
    <string name="pickerview_hours">时</string>
    <string name="pickerview_minutes">分</string>
    <string name="pickerview_seconds">秒</string>
    <string name="position_acquisition">信息采集</string>
    <string name="begin_acqusition">开始采集</string>
    <string name="select_newadd_type">请选择新增的标注类型</string>
    <string name="jichusheshi">基础设施</string>
    <string name="community_park">区域(小区、公园)</string>
    <string name="carry_on">继续</string>
    <string name="finish_txt">结束</string>
    <string name="caiji_time">持续采集时间</string>
    <string name="stop">暂停</string>
    <string name="type">类型</string>
    <string name="name">名称</string>
    <string name="photo">照片</string>
    <string name="release">发布</string>
    <string name="video_list">视频监控列表</string>
    <string name="video">视频监控</string>

    <string name="action_settings">Settings</string>
    <string name="msg_tixing">消息提醒</string>
    <string name="reply_msg">消息回复</string>
    <string name="history_lllegal">历史违规</string>
    <string name="back">返回</string>
    <string name="change_pwd">修改密码</string>
    <string name="submit">提交</string>
    <string name="history">历史</string>
    <string name="history_positon">历史采集</string>
    <string name="caijiinfos_detail">采集信息详情</string>
    <string name="txt_reply">回复</string>
    <string name="msg">消息</string>
    <string name="msg_detail">消息详情</string>
    <string name="CHINA">中国</string>
    <string name="problem_upload">问题上报</string>


    <string name="text_group">发起聊天</string>
    <string name="text_add">添加好友</string>
    <string name="text_sweep">扫一扫</string>
    <string name="text_collect">收付款</string>
    <string name="text_help">帮助与反馈</string>

</resources>
